# plotline

./: .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  PERCHAPTER.md  README.md  RELEASE-v0.2.0.md  eslint.config.mjs  forge.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.main.config.ts  vite.renderer.config.ts  vitest.config.ts
bench-projects/: generator.ts
bench-results/: benchmark.test.ts
docs/: LKY_Book_Outline_v0.2.md  design_document.md  example_prompt.md  plotline-design-doc-v0.1.0.md  plotline-design-doc-v0.3.0.md  plotline-design-doc-v0.4.0.md  plotline-roadmap-v0.1.0.md  plotline-roadmap-v0.2.0.md  plotline-roadmap-v0.3.0.md  plotline-roadmap-v0.4.0.md  plotline-tech-spec-v0.1.0.md  plotline-tech-spec-v0.2.0.md  plotline-tech-spec-v0.3.0.md  roadmap.md  technical_specification.md
scripts/: apprun.sh  ci.sh  download-tectonic.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  openrouter.rs  run_manager.rs  substitution.rs  workflow.rs
src-tauri/tests/fixtures/project/prompts/: step1.md  step2.md
src-tauri/tests/fixtures/project/variables/: my-var_name.md  protagonist.md  style.md
src-tauri/tests/fixtures/project/workflows/: duplicate_names.yaml  empty_model.yaml  empty_name.yaml  empty_prompt_file.yaml  empty_step_name.yaml  empty_steps.yaml  invalid.yaml  invalid_step_name.yaml  missing_prompt.yaml  path_traversal.yaml  valid.yaml
src/api/: tauri.ts
(+187 files in other folders)
