[package]
name = "plotline"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-store = "2"
keyring = { version = "3", features = ["linux-native"] }
regex = "1"
thiserror = "2"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]

[lib]
name = "plotline_lib"
crate-type = ["lib", "cdylib", "staticlib"]
